--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ pandas==2.2.1
 pydantic==2.6.3
 pydantic_core==2.16.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+python-dotenv
 pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
